# OpenAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.db.yml  main.py  pyproject.toml  ruff.toml
.github/workflows/: docker-build.yaml  lint-and-format.yaml  lint.yaml
examples/: finance_console_agent.py  finance_console_agent.yaml  pendle.py  pendle_agent.py  pendle_agent.yaml  simple_agent.yaml  simple_agent_with_celery.py  simple_agent_with_celery.yaml  twitter_agent.py  twitter_agent.yaml  twitter_monitor_agent.py  twitter_monitor_agent.yaml  twitter_support_agent.py  twitter_support_agent.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 215e5a803b40_create_initial_tables.py  6e5fcfc0cb29_create_initial_tables.py  8d75ab10991b_add_airdrop_tables.py
openagent/: __init__.py  app.py  cli.py  server.py
openagent/agent/: agent.py  banner.py  config.py  model_loader.py  scheduler.py  tool_loader.py  yaml_generator.py
openagent/agents/: __init__.py  feed.py  finance.py  twitter.py
openagent/api/: __init__.py  app.py
openagent/cache/: __init__.py
openagent/conf/: env.py  llm_provider.py
openagent/core/: agent.py  config.py  input.py  output.py  tool.py
openagent/core/constants/: chain_ids.py
openagent/core/database/: engine.py  sqlite.py
openagent/core/interfaces/: input.py  output.py
openagent/core/utils/: fetch_json.py  json_equal.py
openagent/database/: __init__.py
openagent/database/migrations/: env.py
openagent/database/models/: agent.py  airdrop.py  model.py  tool.py
openagent/db/: __init__.py
openagent/db/models/: agent.py  model.py  tool.py  workflow.py
openagent/executors/: project_executor.py
openagent/inputs/: stdin.py  twitter.py  twitter_mention.py  twitter_user_stream.py
openagent/inputs/pendle_knowledge_base/: extractor.py
openagent/io/inputs/: data_monitor.py  stdin.py  twitter_mention.py  twitter_user_stream.py
openagent/io/inputs/pendle_knowledge_base/: extractor.py  index.py  recursive_url_loader.py
openagent/io/outputs/: stdout.py  twitter_post.py  twitter_reply.py
openagent/models/anthropic/: claude.py
openagent/models/deepseek/: deepseek.py
openagent/models/ollama/: chat.py  hermes.py  tools.py
openagent/models/openai/: chat.py
openagent/outputs/: stdout.py  twitter.py  twitter_post.py  twitter_reply.py
openagent/router/: __init__.py  model.py  openai.py  server.py
openagent/router/error/: __init__.py
openagent/router/routes/: __init__.py  agent.py  auth.py  chat.py  database.py  model.py  tool.py
openagent/router/routes/models/: auth.py  request.py  response.py
openagent/tools/: __init__.py  coingecko.py  console_output.py  data_analysis.py  dsl.py  pendle_market_analysis.py  pendle_voter_apy_analysis.py  stock_price.py  swap.py  token_price.py  token_utils.py  tool_config.py  tool_factory.py  twitter_feed.py  twitter_post.py
openagent/tools/aave/: market_analysis.py
openagent/tools/airdrop/: __init__.py  agent.py
openagent/tools/arbitrum/: compound_market_analysis.py
openagent/tools/compound/: market_analysis.py
openagent/tools/pendle/: market_analysis.py  voter_apy_analysis.py
openagent/tools/pendle_knowledge_base/: extractor.py  index.py  recursive_url_loader.py
openagent/tools/tests/: test_twitter_tools.py
openagent/tools/twitter/: __init__.py  feed.py  post.py  quote.py  retweet.py  tweet_generator.py  twitter_handler.py
test/: demo.py  phidata_agent.py  playground.py
test/tools/: test_pendle_market.py  test_token_price.py  test_twitter_feed.py  test_twitter_post.py
tests/: compatible-models.mdx
tests/templates/: compatible-models.mdx.j2
