[tool.poetry]
name = "openagent"
version = "0.1.0"
description = ""
authors = ["RSS3 Network <contact@rss3.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
tweepy = "^4.14.0"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
packaging = "^24.2"
openai = "^1.59.3"
duckduckgo-search = "^7.2.0"
yfinance = "^0.2.51"
agno = "^1.0.6"
pyfiglet = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
