[tool.poetry]
name = "openagent"
version = "0.2.0"
description = "OpenAgent is a framework for rapidly launching functional AI agents powered by Open."
authors = ["RSS3 Network <contact@rss3.io>"]
readme = "README.md"
packages = [{ include = "openagent" }]

[tool.poetry.scripts]
openagent = "openagent.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
tweepy = "^4.14.0"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
packaging = "^24.2"
openai = "^1.59.3"
duckduckgo-search = "^7.2.0"
yfinance = "^0.2.51"
agno = "^1.0.6"
pyfiglet = "^1.0.2"
langchain-community = "^0.3.17"
docling = "^2.20.0"
langchain = "^0.3.18"
langchain-openai = "^0.3.4"
pydantic = "^2.10.6"
celery = { extras = ["redis"], version = "^5.4.0" }
apscheduler = "^3.11.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy-orm = "^1.2.10"
web3 = "^7.7.0"
eth-account = "^0.13.4"
anthropic = "^0.42.0"
google-generativeai = "^0.8.3"
ollama = "^0.4.5"
phidata = "^2.7.7"
psycopg2-binary = ">=2.9.10,<3.0.0"
atlas-provider-sqlalchemy = ">=0.2.4,<0.3.0"
alembic = ">=1.14.0,<2.0.0"
redis = ">=5.2.1,<6.0.0"
pytest = ">=8.3.4,<9.0.0"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.7"

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
disable_error_code = [
    "arg-type",
    "call-arg",
    "union-attr",
    "operator",
    "unused-ignore",
    "override",
    "attr-defined",
    "valid-type",
    "import-not-found",
    "import-untyped",
    "import-untyped",
    "assignment",
    "no-any-return",
    "no-any-unimported",
    "import-not-found",
    "misc",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
